--- a/myproject/.render.yaml
+++ b/myproject/.render.yaml
@@ -1,1 +1,9 @@
-python_version: 3.11.9
+services:
+  - type: web
+    name: pagina-presencia
+    env: python
+    pythonVersion: 3.11.9
+    buildCommand: pip install -r requirements.txt
+    startCommand: gunicorn L.wsgi:application
+    autoDeploy: true
+    branch: main
